# ModelConverter

./: .gitignore  CMakeLists.txt  batch_convert.bat
.claude/: CLAUDE.md
.codebuddy/rules/: 项目代码编写规范.mdc
.devin/rules/: architecture.md  coding.md
.trae/rules/: 项目代码编写规范.md
docs/: fbx导出glb骨骼可视化异常.md  fbx读取模型出现断言问题.txt  gltfViewerWeb报错.txt  关于fbx导出glb动画问题.txt  关于fbx旋转动画claude给出建议.md  关于动画实现的讨论.md  开发计划文档.md  技术架构.md
include/mc/common/: Logger.h  Math.h  Types.h
include/mc/core/: Animation.h  Camera.h  Light.h  Material.h  Mesh.h  Node.h  PointInstancer.h  Scene.h  SceneMetadata.h  Skeleton.h  Skin.h  Texture.h
include/mc/exporter/: IExporter.h
include/mc/importer/: IImporter.h
include/mc/pipeline/: AnimationOptimizePass.h  AxisConvertPass.h  HandednessFlipPass.h  IPass.h  Pipeline.h  UnitConvertPass.h  ValidatePass.h
include/mc/pluginmgr/: IPlugin.h  PluginManager.h
plugins/assimp/: AssimpSceneConverter.cpp  AssimpSceneConverter.h  CMakeLists.txt  Plugin_Assimp.cpp
plugins/dummy/: CMakeLists.txt  Plugin_Dummy.cpp
plugins/dummy_exporter/: CMakeLists.txt  Plugin_DummyExporter.cpp
plugins/fbx/: CMakeLists.txt  FbxExporter.cpp  FbxExporter.h  FbxMeshHelper.cpp  FbxMeshHelper.h  FbxSceneConverter.cpp  FbxSceneConverter.h  Plugin_Fbx.cpp
plugins/gltf/: CMakeLists.txt  GltfCommonUtils.cpp  GltfCommonUtils.h  GltfExporter.cpp  GltfExporter.h  GltfSceneConverter.cpp  GltfSceneConverter.h  Plugin_Gltf.cpp
src/app/: main.cpp
src/common/: Logger.cpp
src/pipeline/: AnimationOptimizePass.cpp  AxisConvertPass.cpp  HandednessFlipPass.cpp  Pipeline.cpp  UnitConvertPass.cpp  ValidatePass.cpp
src/pluginmgr/: PluginManager.cpp
tests/unit/: AnimationOptimizePassTest.cpp  AssimpPluginTest.cpp  ConvertPassTest.cpp  ExporterTest.cpp  FbxAnimationExportTest.cpp  FbxAnimationTest.cpp  FbxExporterTest.cpp  FbxPluginTest.cpp  GltfAnimationExportTest.cpp  GltfAnimationTest.cpp  GltfExporterTest.cpp  GltfPluginTest.cpp  LoggerTest.cpp  PipelinePassTest.cpp  PluginManagerTest.cpp  SceneCreateTest.cpp  SceneDestroyTest.cpp  SceneStressTest.cpp  ValidatePassTest.cpp
